tests/integration/errors/test_escape_brace_hint.sn
# Error test: \{ in interpolated string should suggest {{ instead

fn main(): void =>
  var x: int = 42
  println($"\{x\}")
